--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,19 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "request": "launch",
-            "name": "Launch Program",
-            "type": "pwa-node",
-            "program": "${workspaceFolder}/main.ts",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "deno",
-            "runtimeArgs": [
-                "run",
-                "--inspect",
-                "--allow-all"
-            ],
-            "attachSimplePort": 9229
-        }
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "chrome",
+        "url": "index.html",
+        "webRoot": "${workspaceFolder}"
+    }
     ]
 }
